--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -11,6 +11,7 @@
 <body>
 
 <h2 th:text="'안녕하세요! ' + ${username} + '님'"/>
+<p class="p"><a href="/">home</a></p>
 <p class="p"><a href="/logout">logout</a></p>
 
 <br>
