--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -17,6 +17,7 @@
 <br>
 
 <h2>현재 추가된 책</h2>
+<p class="p"><a href="/book/search"> 책 추가하기 </a></p>
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
