--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -15,6 +15,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
+            <img id="imgId" th:src="${book.imageLink}" style="width: 20%; height: auto;"/>
             <table class="table table-bordered table-hover dt-responsive">
             <thead>
             <tr>
